--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "preinstall": "npx npm-force-resolutions"
   },
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^2.1.1",
@@ -15,11 +16,11 @@
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@creazy231/strapi-plugin-apollo-sandbox": "^0.0.13",
     "@koa/cors": "^5.0.0",
-    "@strapi/plugin-cloud": "4.20.2",
-    "@strapi/plugin-graphql": "^4.20.2",
-    "@strapi/plugin-i18n": "4.20.2",
-    "@strapi/plugin-users-permissions": "4.20.2",
-    "@strapi/strapi": "4.20.2",
+    "@strapi/plugin-cloud": "^4.15.5",
+    "@strapi/plugin-graphql": "^4.15.5",
+    "@strapi/plugin-i18n": "^4.15.5",
+    "@strapi/plugin-users-permissions": "^4.15.5",
+    "@strapi/strapi": "^4.15.5",
     "better-sqlite3": "8.6.0",
     "custom-slug": "^2.1.1",
     "react": "^18.0.0",
@@ -30,6 +31,9 @@
     "strapi-plugin-import-export-entries": "^1.23.1",
     "strapi-plugin-meilisearch": "^0.10.0",
     "styled-components": "5.3.3"
+  },
+  "resolutions": {
+    "graphql": "16.6.0"
   },
   "author": {
     "name": "A Strapi developer"
