--- a/package.json
+++ b/package.json
@@ -1,49 +1,47 @@
 {
   "name": "demo",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "description": "A Strapi application",
-  "scripts": {
-    "develop": "strapi develop",
-    "start": "strapi start",
-    "build": "strapi build",
-    "strapi": "strapi",
-    "preinstall": "npx npm-force-resolutions"
-  },
-  "dependencies": {
-    "@_sh/strapi-plugin-ckeditor": "^2.1.1",
-    "@ckeditor/ckeditor5-build-classic": "^41.1.0",
-    "@ckeditor/ckeditor5-react": "^6.2.0",
-    "@creazy231/strapi-plugin-apollo-sandbox": "^0.0.13",
-    "@koa/cors": "^5.0.0",
-    "@strapi/plugin-cloud": "^4.15.5",
-    "@strapi/plugin-graphql": "^4.15.5",
-    "@strapi/plugin-i18n": "^4.15.5",
-    "@strapi/plugin-users-permissions": "^4.15.5",
-    "@strapi/strapi": "^4.15.5",
-    "better-sqlite3": "8.6.0",
-    "custom-slug": "^2.1.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "5.3.4",
-    "strapi-plugin-duplicate-button": "^1.1.14",
-    "strapi-plugin-fuzzy-search": "^2.2.1",
-    "strapi-plugin-import-export-entries": "^1.23.1",
-    "strapi-plugin-meilisearch": "^0.10.0",
-    "styled-components": "5.3.3"
-  },
-  "resolutions": {
-    "graphql": "16.6.0"
-  },
+  "license": "MIT",
   "author": {
     "name": "A Strapi developer"
   },
-  "strapi": {
-    "uuid": "0db616b8-b91c-4191-adec-c601f74aa4e5"
+  "scripts": {
+    "build": "strapi build",
+    "develop": "strapi develop",
+    "preinstall": "npx npm-force-resolutions",
+    "start": "strapi start",
+    "strapi": "strapi"
+  },
+  "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "2.1.1",
+    "@ckeditor/ckeditor5-build-classic": "41.1.0",
+    "@ckeditor/ckeditor5-react": "6.2.0",
+    "@creazy231/strapi-plugin-apollo-sandbox": "0.0.13",
+    "@koa/cors": "5.0.0",
+    "@strapi/plugin-cloud": "4.20.2",
+    "@strapi/plugin-graphql": "4.20.2",
+    "@strapi/plugin-i18n": "4.20.2",
+    "@strapi/plugin-users-permissions": "4.20.2",
+    "@strapi/strapi": "4.20.2",
+    "better-sqlite3": "8.6.0",
+    "custom-slug": "2.1.1",
+    "diacritics": "1.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "5.3.4",
+    "strapi-plugin-duplicate-button": "1.1.14",
+    "strapi-plugin-fuzzy-search": "2.2.1",
+    "strapi-plugin-import-export-entries": "1.23.1",
+    "strapi-plugin-meilisearch": "0.10.0",
+    "styled-components": "5.3.3"
   },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "strapi": {
+    "uuid": "0db616b8-b91c-4191-adec-c601f74aa4e5"
+  }
 }
